  submit time with decreasing value).  "priority/multifactor" is a new plugin 
  which utilizes logic to set a priority on a job based on many different 
  configuration parameters as described here:  
  https://computing.llnl.gov/linux/slurm/job_priority.html
* The task/affinity plugin will automatically bind a job step to the CPUs
  it has been allocated. SLURM's SPANK plugin by the name of "CPUSET" should
  no longer be needed.
* BLUEGENE - Added option DenyPassthrough in the bluegene.conf.  Can be set
  to any combination of X,Y,Z to not allow passthroughs when running in 
  dynamic layout mode. (see "man bluegene.conf" for details)

COMMAND CHANGES (see man pages for details)
* --task-mem and --job-mem options have been removed from salloc, sbatch and
  srun. Use --mem-per-cpu or --mem instead.
* Added the srun option --preserve-env to pass the current values of 
  environment variables SLURM_NNODES and SLURM_NPROCS through to the 
  executable, rather than computing them from commandline parameters.
* --ctrl-comm-ifhn-addr option has been removed from the srun command (it is 
  no longer useful).
* Batch jobs have an environment variable SLURM_RESTART_COUNT set when 
  restarted.
* To create a partition using the scontrol command, use the "create" command
  rather than "update" with a new partition name.
* Time format of all SLURM command set to ISO 8601 (yyyy-mm-ddThh:mm:ss)
  unless the configure option "--disable-iso8601" is used at build time.
* sacct -S to satus a job will no longer work.  Use sstat from now on.
* sacct and sstat have been rewritten to have a more sacctmgr like feel

ACCOUNTING CHANGES
* Added ability for slurmdbd to archive and purge step and/or job records.
* Added support for Workload Characterization Key (WCKey) in accounting 
  records. This is an optional string that can be used to identify the type of
  work being performed (in addition to user ID, account name, job name, etc.).

OTHER CHANGES