@@ -90,8 +90,9 @@ CONFIGURATION FILE CHANGES (see "man slurm.conf" for details)
   configuration parameters as described here:  
   https://computing.llnl.gov/linux/slurm/job_priority.html
 * The task/affinity plugin will automatically bind a job step to the CPUs
-  it has been allocated. SLURM's SPANK plugin by the name of "CPUSET" should
-  no longer be needed.
+  it has been allocated. The entity bound to (sockets, cores or threads)
+  will be automatically set based upon the allocation size and task count
+  SLURM's SPANK cpuset plugin is no longer be needed.
 * BLUEGENE - Added option DenyPassthrough in the bluegene.conf.  Can be set
   to any combination of X,Y,Z to not allow passthroughs when running in 
   dynamic layout mode. (see "man bluegene.conf" for details)
